src/objects/ProjectFieldDisplay__c.object
<CustomObject>
    <fields>
        <fullName>ProjectRecordTypeId__c</fullName>
        <description>1. Full EPC
2. Install Only
3. Partial EPC
4. Remove/Replace
5. Exception Project
6. Utility Program</description>
        <inlineHelpText>Choose the Record Type(s) that this Project Field Display should be associated with. Multiple selections are allowed on an single Project Field Display record, but any individual Record Type may only be chosen once across all Project Field Display records</inlineHelpText>
        <label>Project Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>012610000001sUdAAI</fullName>
                </value>
                <value>
                    <fullName>012610000001sUiAAI</fullName>
                </value>
                <value>
                    <fullName>01261000000kpsMAAQ</fullName>
                </value>
                <value>
                    <fullName>01261000000MCV2AAO</fullName>
                </value>
                <value>
                    <fullName>01261000000krSiAAI</fullName>
                </value>
                <value>
                    <fullName>01261000000ksKIAAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section10Label__c</fullName>
        <label>Section 10 Label</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section10Order__c</fullName>
        <label>Section 10 Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section10Tab__c</fullName>
        <label>Section 10 Tab</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section10__c</fullName>
        <label>Section 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section11Label__c</fullName>
        <label>Section 11 Label</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section11Order__c</fullName>
        <label>Section 11 Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section11Tab__c</fullName>
        <label>Section 11 Tab</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section11__c</fullName>
        <label>Section 11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section12Label__c</fullName>
        <label>Section 12 Label</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section12Order__c</fullName>
        <label>Section 12 Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section12Tab__c</fullName>
        <label>Section 12 Tab</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section12__c</fullName>
        <label>Section 12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Project Field Display</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Field Displays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>